Fix headings and line spacings

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -13798,32 +13798,32 @@ main.main-document {
 main.main-document.bg-transparent {
   background: transparent;
 }
-main.main-document h1 {
-  margin-bottom: 2pt;
-}
-main.main-document h2 {
-  margin-bottom: 2pt;
-}
-main.main-document h3 {
-  margin-bottom: 2pt;
-}
-main.main-document h4 {
-  margin-bottom: 2pt;
-}
-main.main-document h5 {
-  margin-bottom: 2pt;
-}
-main.main-document h6 {
-  margin-bottom: 2pt;
-}
 main.main-document header,
 main.main-document footer,
 main.main-document section {
-  margin-bottom: 5pt;
+  margin-bottom: 0.5em;
+}
+main.main-document h1 {
+  margin-bottom: 0.15em;
+}
+main.main-document h2 {
+  margin-bottom: 0.15em;
+}
+main.main-document h3 {
+  margin-bottom: 0.15em;
+}
+main.main-document h4 {
+  margin-bottom: 0.15em;
+}
+main.main-document h5 {
+  margin-bottom: 0.15em;
+}
+main.main-document h6 {
+  margin-bottom: 0.15em;
 }
 main.main-document li,
 main.main-document p {
-  margin-bottom: 2pt;
+  margin-bottom: 0.15em;
 }
 main.main-document .wrap-paper {
   position: relative;
@@ -18123,7 +18123,7 @@ main.main-document .h3-imp:before, main.main-document .h3-imp:after {
 }
 main.main-document h4,
 main.main-document .h4 {
-  font-size: 16pt;
+  font-size: 1.75em;
   line-height: 1.15;
   font-family: "Tinos-Bold", "Times New Roman", serif;
 }
@@ -18133,7 +18133,7 @@ main.main-document .h4:after {
   display: none;
 }
 main.main-document .h4-imp {
-  font-size: 16pt !important;
+  font-size: 1.75em !important;
   line-height: 1.15 !important;
   font-family: "Tinos-Bold", "Times New Roman", serif !important;
 }
@@ -18142,7 +18142,7 @@ main.main-document .h4-imp:before, main.main-document .h4-imp:after {
 }
 main.main-document h5,
 main.main-document .h5 {
-  font-size: 15pt;
+  font-size: 1.5em;
   line-height: 1.15;
   font-family: "Tinos-Bold", "Times New Roman", serif;
 }
@@ -18152,7 +18152,7 @@ main.main-document .h5:after {
   display: none;
 }
 main.main-document .h5-imp {
-  font-size: 15pt !important;
+  font-size: 1.5em !important;
   line-height: 1.15 !important;
   font-family: "Tinos-Bold", "Times New Roman", serif !important;
 }
@@ -18161,7 +18161,7 @@ main.main-document .h5-imp:before, main.main-document .h5-imp:after {
 }
 main.main-document h6,
 main.main-document .h6 {
-  font-size: 14pt;
+  font-size: 1.25em;
   line-height: 1.15;
   font-family: "Tinos-Bold", "Times New Roman", serif;
 }
@@ -18171,7 +18171,7 @@ main.main-document .h6:after {
   display: none;
 }
 main.main-document .h6-imp {
-  font-size: 14pt !important;
+  font-size: 1.25em !important;
   line-height: 1.15 !important;
   font-family: "Tinos-Bold", "Times New Roman", serif !important;
 }
