--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -155,12 +155,6 @@ $paper-margin: 0.25in;
 $paper-width: 8.5in;
 $paper-height: 11in;
 
-$head-sizes: (
-  "4": 16pt,
-  "5": 15pt,
-  "6": 14pt
-);
-
 $formal-sizes: (
   "1": 1in,
   "15": 1.5in,
